# Wonky

./: .gitignore  LICENSE  README.md
api/: api.py
examples/: README.md
init_notebooks/: 1_parse_documents_div_split.ipynb  2_vectorize_data.ipynb  3_index_data.ipynb  5_burr_research_flow_topic_multisearch.ipynb  6_burr_parse_reports.ipynb  7_index_reports_and_sections.ipynb
project_research/: research.sqlite
project_research/json_data/: 16c99755-6641-4a24-b377-dad4f673f05c_2025-05-31_14-30-40.json  21d77f85-4aec-4143-b7af-ff9727c7064e_2025-05-31_12-05-30.json  39dda0ba-28d1-4dd5-994d-793624c7ad81_2025-05-31_12-02-33.json  49f26f2c-e4b0-43ba-8f97-c9ffb48c2d37_2025-05-31_12-41-32.json  (+7 more)
rag/: extraction_prompts.json  research_tables.sql  text_lookup.py
ui/mycroft_services/: Dockerfile  docker-compose.yml  pyproject.toml
ui/mycroft_services/src/: main.py
ui/mycroft_services/src/intelligent_backend/: telemetry_server.py
ui/mycroft_services/src/intelligent_backend/api/: endpoints.py  schemas.py
ui/mycroft_services/src/intelligent_backend/core/: config.py  dependencies.py
ui/mycroft_services/src/intelligent_backend/db/: crud.py  models.py  session.py
ui/mycroft_services/src/intelligent_backend/workflows/: models.py
ui/mycroft_services/src/intelligent_backend/workflows/extraction/: insight_extraction.py  policy_extraction.py
vue-ui/: README.md  package-lock.json  package.json
workflows/: Insight_Policy_StrategicAnalysis.ipynb  Insight_Report_generate_prototype.ipynb  Insight_Report_search_prototype.ipynb  README.md  project_folder_structure.md
(+201 files in other folders)
